byte-buddy was added back, because it was required by mockito and without it, the programm does not work